feat(http): Refactor HTTP subsystem structure and add TCK bindings for client, server, and exchange